Fixed Footer on mobile (text overflow making page wider and footer would appear in the middle of the page)

--- a/src/AGGS/wwwroot/css/site.css
+++ b/src/AGGS/wwwroot/css/site.css
@@ -37,20 +37,33 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+}
+
+@media (max-width: 415px) {
+    .footer{
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 321px) {
+    .footer{
+        font-size: 8px;
+    }
 }
